Package refactor. Added base record and view
